[metadata]
name = nscs_loadbalancer
version = 2014
summary = NSCS Loadbalancer RESTful Application services
description-file =
    README.rst
author = Freescale
author-email = b37208@freescale.com
home-page = http://www.freescale.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    nscs_loadbalancer

data_files =
    etc/crd/modules =
        etc/crd/modules/loadbalancer.conf


[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = nscs_loadbalancer/locale/nscs_loadbalancer.pot

[compile_catalog]
directory = nscs_loadbalancer/locale
domain = nscs_loadbalancer

[update_catalog]
domain = nscs_loadbalancer
output_dir = nscs_loadbalancer/locale
input_file = nscs_loadbalancer/locale/nscs_loadbalancer.pot
